--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_html: ^3.0.0-alpha.6
   flutter_markdown: ^0.6.15
   url_launcher: ^6.1.11
 
