--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.6
   flutter_markdown: ^0.6.15
   url_launcher: ^6.1.11
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
