dont ask for input

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,8 @@
         {
             "label": "deploy",
             "type": "shell",
-            "command": "flutter clean && flutter build web && git add . && git commit -m \"github pages deployment\" && git push"
+            "command": "flutter clean && flutter build web && git add . && git commit -m \"github pages deployment\" && git push",
+            "problemMatcher": []
         }
     ]
 }
