build web app before release test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
         {
             "name": "release",
             "request": "launch",
+            "preLaunchTask": "build",
             "type": "python",
             "module": "http.server",
             "args": [
