add bind arg to launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,8 @@
                 "8000",
                 "-d",
                 "build/web",
+                "--bind",
+                "0.0.0.0",
             ]
         }
     ],
